--- a/src/SP/CoreBundle/Resources/views/Core/index.html.twig
+++ b/src/SP/CoreBundle/Resources/views/Core/index.html.twig
@@ -2,7 +2,7 @@
 {% extends "SPCoreBundle::layout.html.twig" %}
 
 {% block title %}
-  Page d'accueil - {{ parent() }}
+  Page d'accueil 
 {% endblock %}
 
 {% block body %}
