Creation formulaire marche/arret enregistrement

--- a/src/SP/BackendBundle/Resources/views/Backend/index.html.twig
+++ b/src/SP/BackendBundle/Resources/views/Backend/index.html.twig
@@ -9,8 +9,16 @@
 
   <h2>Page d'accueil du backend</h2>
 
-  <p>
-    Bla bla bla...
-  </p>
+  <div id="Enregistrement">
+  	<p>Run Enregistrement : <br></p>
+  
+   {{ form(form) }}
+{#   	<button>Marche</button>#}
+{#   	<button>Arret</button>#}
+  </div>
+  <br>
+  <div id="etat">
+   Etat : 
+  </div>
 
 {% endblock %}
