--- a/src/SP/CoreBundle/Resources/views/layout.html.twig
+++ b/src/SP/CoreBundle/Resources/views/layout.html.twig
@@ -37,6 +37,11 @@
             <li><a href="">Ajouter une annonce</a></li>
           {% endif %}
         </ul>
+        <h3> Backend</h3>
+        <ul class="nav nav-pills nav-stacked">
+        	<li><a href="{{ path('sp_backend_homepage') }}">Accueil</a></li>
+        </ul>
+
 
 
       </div>
